// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON filters unnecessary warns 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "@renovate/no",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON supports github enterprise and github enterprise changelog 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://github-enterprise.example.com/api/v3/",
    "baseUrl": "https://github-enterprise.example.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github-enterprise.example.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON supports github enterprise and github.com changelog 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON supports github.com and github enterprise changelog 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://github-enterprise.example.com/api/v3/",
    "baseUrl": "https://github-enterprise.example.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github-enterprise.example.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON supports node engines 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON uses GitHub tags 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/index getChangeLogJSON works without Github 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "repository": "chalk/chalk",
    "sourceDirectory": undefined,
    "sourceUrl": "https://github.com/chalk/chalk",
    "type": "github",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2017-12-24T03:20:46.238Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "2.4.2",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "gitRef": "npm_2.3.0",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "gitRef": "npm_2.2.2",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;
